# vidsrc-search

./: .gitignore  Acknowledgements.md  LICENSE  README.md  bootstrapper.py  entrypoint.py  firstboot.py  pyproject.toml  requirements.txt  search_engine.py  setup.cfg  setup.py  setup.sh  uninstall.py  uninstall.sh
App/: bootstrapper.py  download_engine.py  entrypoint.py  firstboot.py  main.py  search_engine.py
pymovie-search/: download_engine.py
src/py-movie/: __init__.py  bootstrapper.py  entrypoint.py  firstboot.py  uninstall.py
src/vidsrc_search/: __main__.py  argparsing.py  download.py  json_utils.py  library.py  modules.py  search.py  term.py  uninstall.py  utils.py
src/vidsrc_search/core/: help.py  library.py  search.py  version.py
