[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vidsrc-search"
version = "0.0.7"
description = "A pirate movie watcher written in Python"
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python",
    "Topic :: Multimedia",
    "Topic :: Utilities",
    "Environment :: Console"
]

keywords = ["movie", "video", "search"]
dependencies = [
    "aiohttp",
    "thefuzz",
    "tabulate",
    "requests"
]

requires-python = ">=3.6"

[project.urls]
Homepage = "https://github.com/SomedudeX/vidsrc-search"

[project.scripts]
vidsrc-search = "vidsrc_search.__main__:main"
