[metadata]
description-file=README.md
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "py-movie"
version = "1.0.3"
description = "A pirate movie searcher written in Python"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
[project.urls]
Homepage = "https://github.com/SomedudeX/PyMovie"
